Payment/kube/ingress-dt-payment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress-8083
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: myapp-service-8083
                port:
                  number: 8083
